# Weather_data_GUI

./: .env.example  .gitignore  API_DOCS.md  CLAUDE.md  README.md  demo.ipynb  docker-compose.yml
.omc/: prd.json  progress.txt
backend/: Dockerfile  catalog.py  docker-compose.yml  download.py  main.py  pww_io.py  regions.py  requirements.txt  status.py
frontend/: README.md  index.html  main.js  styles.css
package/: README.md  pyproject.toml
package/TeamOverbyeWeather/: __init__.py  client.py  pww_io.py  utils.py
package/TeamOverbyeWeather/sources/: __init__.py  era5.py  hrrr.py  noaa.py
