[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TeamOverbyeWeather"
version = "0.1.0"
description = "Python client for Team Overbye weather data (Texas A&M)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Team Overbye", email = "overbye@tamu.edu" }]
keywords = ["weather", "hrrr", "era5", "noaa", "gfs", "climate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/teamoverbye/weather-data"
